Fixed z-index issue

--- a/src/components/search/Search.css
+++ b/src/components/search/Search.css
@@ -6,6 +6,7 @@
 	top: 75px;
 	right: 50px;
 	overflow: scroll;
+	z-index: 1;
 }
 
 .search-result {
